// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init given bare directory after init (init-bare) should output correct files 1`] = `
Array [
  ".eslintignore",
  ".eslintrc.js",
  ".gitignore",
  ".yarnrc",
  "babel.config.js",
  "commitlint.config.js",
  "jest.config.integration.js",
  "jest.config.js",
  "package.json",
  "prettier.config.js",
  "release.config.js",
  "scripts/",
  "scripts/build.js",
  "scripts/clean.js",
  "scripts/combineCoverage.js",
  "scripts/release.js",
  "src/",
  "src/__integration-tests__/",
  "src/__tests__/",
  "tsconfig.declarations.json",
  "tsconfig.json",
]
`;

exports[`init given non-empty directory after init (init-non-empty) should output correct files 1`] = `
Array [
  ".eslintignore",
  ".eslintrc.js",
  ".gitignore",
  ".yarnrc",
  "babel.config.js",
  "commitlint.config.js",
  "jest.config.integration.js",
  "jest.config.js",
  "package.json",
  "prettier.config.js",
  "release.config.js",
  "scripts/",
  "scripts/build.js",
  "scripts/clean.js",
  "scripts/combineCoverage.js",
  "scripts/release.js",
  "src/",
  "src/__integration-tests__/",
  "src/__tests__/",
  "src/__tests__/max.test.ts",
  "src/__tests__/min.test.js",
  "src/__tests__/test.d.ts",
  "src/index.ts",
  "src/max/",
  "src/max/index.d.ts",
  "src/max/index.js",
  "src/max/max.ts",
  "src/min/",
  "src/min/index.d.ts",
  "src/min/index.js",
  "src/min/min.js",
  "src/other.d.ts",
  "src/other.js",
  "ts-deps.config.js",
  "tsconfig.declarations.json",
  "tsconfig.json",
]
`;

exports[`init given non-empty directory after init, with template parameter (init-template-dir) should output correct files 1`] = `
Array [
  ".eslintignore",
  ".eslintrc.js",
  ".gitignore",
  ".yarnrc",
  "additional.txt",
  "babel.config.js",
  "commitlint.config.js",
  "jest.config.integration.js",
  "jest.config.js",
  "package.json",
  "prettier.config.js",
  "release.config.js",
  "scripts/",
  "scripts/build.js",
  "scripts/clean.js",
  "scripts/combineCoverage.js",
  "scripts/release.js",
  "src/",
  "src/__integration-tests__/",
  "src/__tests__/",
  "src/__tests__/max.test.ts",
  "src/__tests__/min.test.js",
  "src/__tests__/test.d.ts",
  "src/index.ts",
  "src/max/",
  "src/max/index.d.ts",
  "src/max/index.js",
  "src/max/max.ts",
  "src/min/",
  "src/min/index.d.ts",
  "src/min/index.js",
  "src/min/min.js",
  "src/other.d.ts",
  "src/other.js",
  "ts-deps.config.js",
  "tsconfig.declarations.json",
  "tsconfig.json",
]
`;

exports[`init given non-empty directory after init, with template parameter (init-template-package) should output correct files 1`] = `
Array [
  ".eslintignore",
  ".eslintrc.js",
  ".gitignore",
  ".yarnrc",
  "babel.config.js",
  "commitlint.config.js",
  "jest.config.integration.js",
  "jest.config.js",
  "package.json",
  "prettier.config.js",
  "release.config.js",
  "scripts/",
  "scripts/build.js",
  "scripts/clean.js",
  "scripts/combineCoverage.js",
  "scripts/release.js",
  "src/",
  "src/__integration-tests__/",
  "src/__tests__/",
  "src/__tests__/max.test.ts",
  "src/__tests__/min.test.js",
  "src/__tests__/test.d.ts",
  "src/index.ts",
  "src/max/",
  "src/max/index.d.ts",
  "src/max/index.js",
  "src/max/max.ts",
  "src/min/",
  "src/min/index.d.ts",
  "src/min/index.js",
  "src/min/min.js",
  "src/other.d.ts",
  "src/other.js",
  "ts-deps.config.js",
  "tsconfig.declarations.json",
  "tsconfig.json",
  "tslint.json",
]
`;
